<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TriageApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="appName">The Triage App</string>
    <string name="logIn">Log In</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="searchPatientButton">Search Patient</string>
    <string name="title_activity_patient">PatientActivity</string>
    <string name="patientHCNDefault">Not Found</string>
    <string name="title_activity_visit">VisitActivity</string>
    <string name="title_activity_create_vital">CreateVitalActivity</string>
    <string name="title_activity_create_visit">CreateVisitActivity</string>
    <string name="pwField">Password</string>
    <string name="userField">Username</string>
    <string name="userErrorMessage">Whoops, looks like you used to wrong username! Try again....</string>
    <string name="pwErrorMessage">Wrong password, try again...</string>
    <string name="title_activity_create_patient">CreatePatientActivity</string>
    <string name="title_activity_update_prescription">Update Prescription</string>
    <string name="title_activity_patients_by_urgency">PatientsByUrgencyActivity</string>

</resources>
