<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.csc207_0898.triageapp.MainActivity" >

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:text="@string/appName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/userField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="73dp"
        android:ems="10"
        android:hint="@string/userField"
        android:singleLine="true" />

    <EditText
        android:id="@+id/pwField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logIn"
        android:layout_alignLeft="@+id/userField"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/pwField"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/userErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/userField"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/userErrorMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

    <Button
        android:id="@+id/logIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="15dp"
        android:onClick="logIn"
        android:text="@string/logIn" />

    <TextView
        android:id="@+id/pwErrorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/appName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="53dp"
        android:text="@string/pwErrorMessage"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:visibility="invisible" />

</RelativeLayout>